styles/style.scss
/* ... */
.email-sub-container {
	flex: 1;
	min-width: 400px;
	max-width: 650px;
}

.email-sub-form {
	display: flex;
	flex-wrap: wrap;
	&__input {
		flex: 1;
		border-right: none;
	}

	&__btn {
		width: 35%;
	}

	&__result {
		width: 100%;
		height: 0;
		transform: scale(0);
		color: #4b4b4b;
		transition:
			transform 0.2s,
			height 0.2s;

		&.--active {
			transform: scale(1);
			height: 25px;
		}

		&.--success {
			color: #79d379;
		}

		&.--failure {
			color: rgb(226, 108, 90);
		}
	}
}
// Bottom ---
// Adaptive
@media (min-width: 1280px) {
	body.ru .footer__element:nth-child(3) {
		width: 20%;
	}

	body.ru .footer__element:nth-child(2) {
		width: 14%;
	}
}

@media (max-width: 1280px) {
	.footer {
		.container {
			flex-wrap: wrap;
		}

		&__element:not(&__element:last-child) {
			width: 30%;
			padding-left: 4em;
		}
	}

	body.ru .footer__element:nth-child(2) {
		padding-left: 3em;
	}

	body.ru .footer__element:nth-child(3) {
		padding-left: 1.5em;
	}

	.action-btn-container {
		width: 40%;
	}
}

@media (max-width: 1024px) {
	.quotes-element {
		&__inner-container {
			padding: 25px 35px 0 30px;
		}

		&__front-container {
			flex-direction: column;
		}

		&__author {
			width: 70%;
			height: -webkit-fit-content;
			height: -moz-fit-content;
			height: fit-content;
		}

		&__quote {
			width: 100%;
			min-height: auto;
			align-items: flex-end;
			justify-content: flex-start;
			padding-bottom: 30px;
			font-size: clamp(18.5px, 2.5vw, 26px);
			text-align: left !important;
		}
	}

	.quotes-element.--sharing-card .quotes-element__quote {
		bottom: -5px;
	}
}

@media (max-width: 768px) {
	.action-btn {
		body.ru & {
			font-size: clamp(23px, 3.5vw, 30px);
		}
	}

	.submission {
		width: 90%;
		padding: 60px 25px 30px;

		&__input {
			width: 100%;
		}
	}

	.footer {
		.container {
			gap: 3em 0;
		}

		&__element:not(&__element:last-child) {
			width: 50%;
			padding-left: 1em;
		}
	}

	body.ru .footer__element {
		padding: 0 !important;
	}

	.action-btn-container {
		width: 100%;
		display: flex;
		justify-content: center;
	}

	.logo {
		width: 135px;
	}

	.nav-bar__element.close-btn.--cross {
		display: flex;
	}

	.nav-bar__element.back-button:not(.--cross) {
		display: none;
	}

	.burger-menu {
		display: block;
		cursor: pointer;

		&.--active {
			& span:nth-child(2) {
				transform: translateX(-101%) scaleX(0);
			}

			& span:first-child {
				transform: translateY(8px) rotateZ(45deg);
			}

			& span:last-child {
				transform: translateY(-8px) rotateZ(-45deg);
			}
		}
	}

	.main-header__nav-bar {
		&__list {
			width: 320px;
			height: 100vh;
			justify-content: center;
			flex-direction: column;
			position: fixed;
			top: 0;
			right: 0;
			padding-bottom: 10vh !important;
			background-color: #ffffff;
			pointer-events: none;
			transform: translateX(100vw);
		}

		&.--active &__list {
			pointer-events: all;
			transform: translateX(0);
		}

		&__element {
			min-width: 200px;
			padding-top: 10px;
			padding-bottom: 10px;
			margin: 50px 0;
			border-radius: 50px;
		}
	}

	.quotes-element {
		// height: fit-content;
		z-index: 1;
		perspective: 2500px;

		&__back-container {
			position: absolute;
			width: 100%;
			height: 100%;
			-webkit-backface-visibility: hidden;
			backface-visibility: hidden;
			background-color: #ffffff;
			border-radius: inherit;
			transform: rotateY(180deg);
			display: flex;
			justify-content: center;
			align-items: center;
			padding: 0;
		}

		&__buttons-container {
			padding: 25px;
		}

		&__buttons-list {
			width: 100%;
			flex-direction: column;
		}

		&__button {
			min-width: 150px;
			margin: 10px 0;
			border-radius: 50px;
			padding-top: 10px;
			padding-bottom: 10px;
		}

		&__front-container {
			flex-direction: column;
		}

		&__inner-container {
			// // height: $quoteElementHeight;
			// min-height: $quoteElementHeight;
			transform-style: preserve-3d;
			padding: 20px 35px 0 27.5px;
			// -webkit-animation: 2s flip 1s ease-in-out;
			//animation: 2s flip 1s ease-in-out;
		}

		&.--flipped &__inner-container {
			transform: rotateY(180deg);
		}

		&__date {
			width: 100%;
		}

		&__author {
			width: 100%;
			height: -webkit-fit-content;
			height: -moz-fit-content;
			height: fit-content;
		}

		&__quote {
			flex: 1;
			height: -webkit-fit-content;
			height: -moz-fit-content;
			height: fit-content;

			&.--smaller-font-size {
				font-size: clamp(18px, 3.2vw, 18px);
			}

			&.--medium-bigger-font-size {
				font-size: clamp(19px, 3vw, 30px);
			}
		}
	}
}

@media (max-width: 476px) {
	.quotes-element {
		&__quote {
			padding-right: 0;

			&.--smaller-font-size {
				font-size: clamp(16px, 2vw, 24px);
			}
		}
	}

	.footer {
		&__element {
			padding: 0 !important;
		}

		&__element:not(&__element:last-child) {
			width: 100%;
		}
	}

	.email-sub-container {
		min-width: auto;
	}

	.email-sub-form {
		&__input {
			border-right: 2px solid #000;
			border-bottom: none;
		}

		&__btn {
			width: 100%;
		}
	}
}

@media (max-width: 364px) {
	.action-btn {
		font-size: clamp(23px, 3vw, 30px);

		body.ru & {
			font-size: clamp(21px, 3vw, 30px);
		}
	}

	.logo {
		width: 125px;
	}

	.main-header__nav-bar {
		&__list {
			width: 100%;
		}
	}

	.quotes-element {
		&__inner-container {
			padding-right: 17px;
			padding-left: 20px;
			padding-top: 15px;
		}
		&__author {
			padding-right: 0;
		}

		&__quote {
			padding-right: 0;

			&.--smaller-font-size {
				font-size: clamp(15px, 2.2vw, 24px);
				padding-bottom: 17.5px;
			}
		}
	}
}
// Adaptive ---

// Animations
@-webkit-keyframes blink {
	50% {
		opacity: 0;
	}
}
@keyframes blink {
	50% {
		opacity: 0;
	}
}

@-webkit-keyframes quote-card-flip {
	0% {
		transform: rotateY(0deg);
	}
	30% {
		transform: rotateY(180deg);
	}
	70% {
		transform: rotateY(180deg);
	}
	100% {
		transform: rotateY(0deg);
	}
}
/* ... */

